--- a/01-书籍推荐/书籍推荐链接.md
+++ b/01-书籍推荐/书籍推荐链接.md
@@ -1,7 +1,11 @@
 
 
-### 
+### 2018-11-24
 
 - [长江商学院校友推荐40本书单：《浪潮之巅》居首](http://money.163.com/13/0822/16/96T7RU1G00253G87.html)
 
 里面推荐的书不错。
+
+### 2019-0316
+
+- [2019互联网从业者必读的精品书单](https://mp.weixin.qq.com/s/v2MZj7TpOdD2Skce7yHG-A)
