--- a/06-推荐文章/2019-01-优质文章推荐.md
+++ b/06-推荐文章/2019-01-优质文章推荐.md
@@ -123,10 +123,6 @@
 - [《“别难过，我先走啦。”》](https://mp.weixin.qq.com/s/wj0l0u5s2FvG8WwESFmySA) 【荐】
 
 
-
-
-
-
 - [《优质文章每日精华选(2018 年)》](http://www.lijigang.com/blog/2018/04/07/%E4%BC%98%E8%B4%A8%E6%96%87%E7%AB%A0%E6%AF%8F%E6%97%A5%E7%B2%BE%E5%8D%8E%E9%80%89(2018-%E5%B9%B4))
 
 
@@ -148,31 +144,12 @@
 文字很安静。
 
 
-
-
 - [《从 Ctrl、Shift、Alt 键看中外差别（用哲学角度解释）》](https://mp.weixin.qq.com/s/giE9QB9_hlLSVvBOwkNwwQ)
 
 中国人和外国人的浏览器使用习惯还真就是不一样，外国人喜欢在同一个标签页打开并覆盖当前标签页，我们更多的是喜欢在不同标签页打开多个链接。
 
 
-- [《》]()
-
-
-- [《》]()
-
-- [《》]()
-
-
-
-
-
-
 ### 2019-01-06
-
-- [《》]()
-
-- [《》]()
-
 
 
 ### 2019-01-07
@@ -195,11 +172,6 @@
 - [《2018年中国微信500强年榜 | 新榜出品》](https://mp.weixin.qq.com/s/PQDOBVTwVo7ZPlG8-GKA7Q)
 
 - [《2018年中国微信500强年报 | 新榜出品》](https://mp.weixin.qq.com/s/yirfvwP8lkFPpgZiCMAYDQ)
-- [《》]()
-
-
-
-
 
 
 ### 2019-01-08
@@ -210,26 +182,12 @@
 
 - [《《成年人生存指南》，18岁以上才能进！》](https://mp.weixin.qq.com/s/hAcx0ehbLhLqWDyjNB4mig)
 
-- [《》]()
-
-
-- [《》]()
-
-
 
 ### 2019-01-09
 
 - [《微信为什么不出个人年度报告？》](https://mp.weixin.qq.com/s/HhmuShd1MjPj34bSeCxI1Q)
 
 - [《世界首富贝索斯离婚：那个心甘情愿为妻子洗碗的人怎么了？》](http://tech.qq.com/a/20190109/011479.htm)
-
-- [《》]()
-
-- [《》]()
-
-
-
-
 
 
 
@@ -252,27 +210,11 @@
 雷军说的华为的这种作风，有点像房地产的预售。材料都还没备齐，就开始卖了，但标注的是一个月后发货。“有本事你现在就拿出来卖啊”😄
 
 
-- [《》]()
-
-- [《》]()
-
-
-- [《》]()
-
-
 
 ### 2019-01-11
 
-- [《》]()
-
-- [《》]()
-
 
 ### 2019-01-12
-
-- [《》]()
-
-- [《》]()
 
 
 ### 2019-01-13
@@ -285,14 +227,11 @@
 
 - [《印钞机如何运转？——聊一聊谷歌广告系统》](https://mp.weixin.qq.com/s/IXx45aHIQJlAFPlw6Hc0cA) 【荐】
 
-- [《》]()
 
 
 ### 2019-01-15
 
 - [《孤独大脑生存指南》](https://mp.weixin.qq.com/s/zjpbaoP-QfkD6AH6OPlecQ)  【荐】
-
-
 
 - [《徐汇大神》](https://mp.weixin.qq.com/s/7swRELPUcZz9MqCD3xCk5A) 【荐】
 
@@ -303,7 +242,6 @@
 
 
 
-- [《》]()
 
 
 
@@ -313,7 +251,6 @@
 
 看了这么多篇，还是和菜头写的够犀利。
 
-- [《》]()
 
 
 
@@ -328,9 +265,6 @@
 - [《「一罐」张扬：我们要做的是不断扩张陪伴方向的竞争力》](https://mp.weixin.qq.com/s/zmKr21Ct1T5eURzyzq4iRw)
 
 - [《为什么你的 App 知道你想买什么｜回形针》](https://mp.weixin.qq.com/s/0Mn2DBGq6JLvMjPQdDIAvQ)
-
-
-
 
 
 
@@ -371,8 +305,6 @@
 - [《为什么Facebook, Twitter等公司的logo名首字母不大写？》](https://mp.weixin.qq.com/s/PEDXVd6uBzZaLd_vXsQMDA)
 
 
-
-
 ### 2019-01-18
 
 
@@ -385,7 +317,6 @@
 996虽然是常态，但有赞竟然公开宣布，够拼的。
 
 
-- [《》]()
 
 ### 2019-01-19
 
@@ -398,13 +329,8 @@
 - [《王慧文：很少人知道自己在愚昧之巅》](https://mp.weixin.qq.com/s/h16rUrKHXUNyH8u-ND4Mvw)
 
 
-
-
-
 - [《多抓鱼不做「大」：耗费过度资源获取的用户，并不真正属于你》](https://mp.weixin.qq.com/s/mTY4fdh8zmjcvhCD_T8LFw)
 
-
-- [《》]()
 
 ### 2019-01-20
 
@@ -414,14 +340,9 @@
 关于奖池风控的注意事项，讲得每一条都很好。原文在知乎上：[如何看待拼多多出现 100 元无门槛优惠券的漏洞](https://www.zhihu.com/question/309682706/answer/577933329)
 
 
-
-
-
-
 - [《六六:宋思明爱过海藻吗？》](https://mp.weixin.qq.com/s/u84hI0dOVyicIp0UDbDWFA)
 
 同题最佳。
-
 
 
 ### 2019-01-21
@@ -437,8 +358,6 @@
 如果你想了解vlog现在的状况，看这篇就够。
 
 ### 2019-01-22
-
-
 
 
 - [《搜索引擎百度已死》](https://mp.weixin.qq.com/s/OL-WcP0LgGktNgL5yd1hiQ) 【荐】
@@ -459,10 +378,6 @@
 
 - [《小程序「桌面」，真的来了》](https://mp.weixin.qq.com/s/uPsPhgjVvqwphzIM-gmiug)
 
-
-- [《》]()
-
-- [《》]()
 
 
 ### 2019-01-23
@@ -490,8 +405,6 @@
 - [《揭秘：邪门歪道装逼赚钱大法成功的》](https://www.lazyman.vip/2019/01/23/%E6%8F%AD%E7%A7%98%EF%BC%9A%E9%82%AA%E9%97%A8%E6%AD%AA%E9%81%93%E8%A3%85%E9%80%BC%E8%B5%9A%E9%92%B1%E5%A4%A7%E6%B3%95%E6%88%90%E5%8A%9F%E7%9A%84%E6%A1%88%E4%BE%8B/)
 
 
-
-
 ### 2019-01-24
 
 - [《王信文 | 如果我回腾讯上班》](https://mp.weixin.qq.com/s/ELVUyjre8I2-DaDvY8ARig) 【荐】
@@ -503,20 +416,16 @@
 - [《俞军：适合产品经理的十本书》](https://mp.weixin.qq.com/s/Jq-9OZjDKx-zL3x_hN-6xg) 【荐】
 
 
-
-
 - [《冯大辉 | 曾经作为搜索引擎的百度，又怎么了》](https://mp.weixin.qq.com/s/bhT_8KOD4DfMzt3mMFwZpw)
 
 
 - [《不是百度死了，是内容没了》](https://mp.weixin.qq.com/s/c8S-sjKR1VbBpv25FzgkXg)
-
 
 - [《重病患者百度》](https://mp.weixin.qq.com/s/j7uQYnAOTijBjmKRX0mq6Q)
 
 - [《互联网不再互联，10个百度也搜不出你想要的》](https://mp.weixin.qq.com/s/n5b8_H1LNyPKN4Q45u7vQg)
 
 - [《“大V”推荐的理财平台跑路了！公众号推文植入广告合法吗？》](https://mp.weixin.qq.com/s/T0VNWqh39BGY8YWAK7p6mQ)
-
 
 
 - [《一届年终比惨大会》](https://mp.weixin.qq.com/s/HD80TObjzN-d8S8_CYYOYA)
@@ -528,18 +437,14 @@
 
 
 
-
-
 ### 2019-01-25
 
 - [《2018 年度最佳年会节目就是它了》](https://mp.weixin.qq.com/s/DCI6XU09pb9-Ce8IC-fLNg) 【荐】
 
 
-
 - [《抖音奇袭社交，先奇袭用户隐私？》](https://mp.weixin.qq.com/s/KLmAYhEq0Uty9xlHDj3u3w) 【荐】
 
 这问题我也碰见过，推荐的全是熟人的账号。
-
 
 
 - [《2019小程序增长指南（深度干货）》](https://mp.weixin.qq.com/s/6dKWOtadp38EYqVkMZaF2A)
@@ -549,8 +454,6 @@
 
 香农可能被低估了，算得上信息界的牛顿。
 
-
-
 ### 2019-01-26
 
 - [《如何更聪明地从微信朋友圈和抖音获取流量（一》](https://mp.weixin.qq.com/s/qr8zLmp8pzHF8RQxJ854pg)
@@ -558,7 +461,6 @@
 - [《》]()
 
 - [《》]()
-
 
 
 ### 2019-01-27
@@ -573,8 +475,6 @@
 
 
 
-
-
 ### 2019-01-28
 
 - [《企鹅智库|2019中国互联网趋势报告，205页PPT解读16大机会》](https://mp.weixin.qq.com/s/dGke-7qMrPRErnd-ufyolA) 【荐】
@@ -585,26 +485,14 @@
 
 - [《编辑对作者的干涉，尺度在哪儿？》](https://mp.weixin.qq.com/s/vkIJ0c2sl_05BAShzy9iqQ)
 
-
 - [《灰产大军如何分5步瓜分1个亿》](https://mp.weixin.qq.com/s/ENtB_VxLDxGfXxxUVKLsxg)
-
-
-- [《》]()
 
 
 ### 2019-01-29
 
 - [《微博的下一个十年靠什么？丨钛媒体深度》](https://mp.weixin.qq.com/s/MDtGGrFKRwLpDXmIko-ACg)
 
-
-
-- [《给0~1岁的新媒体人：最全行话科普贴》](https://mp.weixin.qq.com/s/DKPsJhryRP5GZFk0N8ok_g)
-
-
-- [《》]()
-
-
-- [《》]()
+- [《给0~1岁的新媒体人：最全行话科普贴》](https://mp.weixin.qq.com/s/DKPsJhryRP5GZFk0N8ok_g) 【荐】
 
 
 ### 2019-01-30
@@ -612,15 +500,6 @@
 - [《一窝咪蒙扑面而来》](https://mp.weixin.qq.com/s/wIFTeScpDROVMEo8oBL3Yg)
 
 - [《两位图灵奖得主万字长文：新计算机架构，黄金十年爆发》](https://mp.weixin.qq.com/s/Y9_-AEqxtSJ2SQvYdk7Yhg)
-
-
-- [《》]()
-
-
-- [《》]()
-
-
-- [《》]()
 
 
 ### 2017-01-31
