--- a/03-得到-学习笔记/01-硅谷来信-吴军/2016-10.md
+++ b/03-得到-学习笔记/01-硅谷来信-吴军/2016-10.md
@@ -1,7 +1,7 @@
 
 
 
-### 20161010-发刊词丨从有限的物质世界飞跃到无限的思想空间
+## 20161010-发刊词丨从有限的物质世界飞跃到无限的思想空间
 
 吴军老师从小就开始阅读，是一个良好的习惯。能影响自己，还能影响他人：
 
@@ -47,7 +47,7 @@
 
 >接下来，就让我们一起插上想象的翅膀，从有限的物质世界飞跃到无限的思想空间吧。
 
-### 20161010-第001封信 | 不做伪工作者
+## 20161010-第001封信 | 不做伪工作者
 
 > 每天的事情太多，总是做不完，是现代人遇到的一个普遍问题，尤其是发展特别快的行业里（比如IT领域）的人或者创业者。
 
@@ -95,77 +95,85 @@
 > 再宽泛地讲，其实很多人在生活中，也是不断地把时间浪费在那些其实可做可不做的事情上。
 所以，每当你因总也干不完的工作而焦虑时，不妨试试先停下来，重新梳理一遍手边的工作：主动地站在对公司业务帮助最大的角度，站在提升自己能力的角度，当处于工作永远做不完的处境时，把那些最重要的完成了。
 
+## 20161011-第002封信 | 夜谈10000小时
 
-### 20161011-第002封信 | 夜谈10000小时
+### 罗辑思维视频《即将到来的社会阶层》
 
+前两天听罗老师讲美国的教育分层（罗辑思维视频第 185 期《即将到来的社会阶层》），也谈及中国教育未来可能发展的趋势，不知道你听了没有。那一讲的内容很好，信息量很大。
 
-### 20161012-第003封信 | 再谈10000小时
+罗老师在那一期的讲座中提出一个不同的观点，那就是你花了这一万个小时可能也没用。
 
+如果仅仅听他这两句话，你可能认为他是在否定格拉德威尔的 10000 小时理论。不过如果你听完罗老师那一讲的全部内容，就会体会到，他的意思其实是：思维方式，周围环境，境界等因素，比花笨功夫要重要。
 
-### 20161013-第004封信丨用大数据分析大众情绪，靠谱吗？
+家庭和生活环境的影响非常重要，这也是罗老师在那一讲中强调的一个话题，敢于把这一点说出来，也是要非凡勇气的，因为这可能一棍子打倒一大片。但是家庭和生活环境不是简单地以经济收入和地区发展程度来划分的。好的环境必须有利于人在身体和心智上成长，能够培养他们对生活积极的态度，激发他们的潜力。
 
-利用大数据分析的方法得到结论，比传统问卷得到的结论更准确：
+(PS：这一期的视频节目，我也看过了，确实不错。)
 
-> 统计学家们发现从互联网上海量的数据出发，利用大数据分析的方法得到结论，比传统问卷得到的结论更准确。在今年的美国大选中，两党的候选人希拉里和特朗普都表示不支持奥巴马的健保法案（希拉里的丈夫克林顿和女儿切尔西已经明确表明了这一点），也说明他们更多地看中大数据分析的结果，而非盖洛普的问卷调查。
+## 20161012-第003封信 | 再谈10000小时
 
+略。
 
-> 等到希拉里和特朗普身上，大数据分析的结果和传统的问卷调查又出现了矛盾。在这两位美国总统候选人第一次电视辩论之后，7家主要媒体问卷调查的结果都是希拉里在辩论中获胜，但是根据推特对50多万使用者统计的结果，55%的人认为是特朗普获胜，差距还是非常大的。
+## 20161013-第004封信丨用大数据分析大众情绪，靠谱吗？
 
-人工神经网络是深度学习的算法基础：
+### 利用大数据分析的方法得到结论，比传统问卷得到的结论更准确
 
-> 至于机器学习的算法，目前很热门的人工神经网络（也就是Google深度学习的算法基础）方法就非常适用，此外，很多其它机器学习的方法（比如贝耶斯网络或者最大熵模型）也都可以解决这个问题。
+统计学家们发现从互联网上海量的数据出发，利用大数据分析的方法得到结论，比传统问卷得到的结论更准确。在今年的美国大选中，两党的候选人希拉里和特朗普都表示不支持奥巴马的健保法案（希拉里的丈夫克林顿和女儿切尔西已经明确表明了这一点），也说明他们更多地看中大数据分析的结果，而非盖洛普的问卷调查。
 
+等到希拉里和特朗普身上，大数据分析的结果和传统的问卷调查又出现了矛盾。在这两位美国总统候选人第一次电视辩论之后，7家主要媒体问卷调查的结果都是希拉里在辩论中获胜，但是根据推特对50多万使用者统计的结果，55%的人认为是特朗普获胜，差距还是非常大的。
 
-### 20161014-第005封信丨为什么治疗癌症需要大数据
+### 人工神经网络是深度学习的算法基础
 
-smyhvae备注：这篇文章，我在《智能时代》里也看到过。
-
->近年来，很多人都在关注大数据帮助医治癌症的相关课题，这种技术前景到底如何？
-
-Google内的大数据医疗公司**Calico**、Calico公司CEO李文森：
-
-> 我在几年前对这件事做了一些专门的了解，因为当时我在考虑是离开Google，还是换到Google内的大数据医疗公司Calico去。关于大数据医治癌症的相关问题，我非常认同Calico公司CEO李文森博士的观点，在此分享给你。
-
-Calico公司CEO李文森的介绍：
-
-> 李文森博士到Google之前是世界上最著名的生物医药公司基因泰克的CEO和董事会主席、Google的董事（2004-2009），并且一直担任苹果公司的董事会主席至今，他也是全世界在生物系统领域最权威的专家之一。2013年，李文森博士离开了基因泰克，担任了Calico这家Google全资子公司的CEO。李文森博士对大数据和机器智能帮助延长人类寿命这件事非常看好，他认为这些技术和医学的结合可以治愈很多顽疾，包括癌症。李文森的观点，代表了今天美国医学界的主流观点。
+至于机器学习的算法，目前很热门的人工神经网络（也就是Google深度学习的算法基础）方法就非常适用，此外，很多其它机器学习的方法（比如贝耶斯网络或者最大熵模型）也都可以解决这个问题。
 
 
-**为什么癌症那么难治愈**：
+## 20161014-第005封信丨为什么治疗癌症需要大数据
 
-> 要讲大数据和机器智能治愈癌症，先要讲为什么癌症那么难治愈。
+（PS：这篇文章，我在《智能时代》里也看到过。）
 
-> 首先，癌症的发病和人有关。癌细胞不像其它的细菌那样来自外部。同一种细菌感染的疾病，致病的细菌通常是相同的（比如肺结核由结核杆菌引起）。癌细胞是我们体内正常细胞在复制时基因出了错而产生的，至于怎么错的，是因人而异的——也就是说同样一种癌症，在不同患者身上基因复制错误可能不相同（这一类和基因相关的病，被认为是由多基因影响的，比较难找出原因，而且每个人都不同；相比之下，像色盲这种遗传病是由单基因引起的，比较容易找到原因，而且大部分患者的原因相同），这就解释了为什么很多抗癌药对一些病人比较灵，对另一些人却没有什么作用，因为他们的癌变其实不同。另外，每一个人的身体条件也不同，同样的抗癌药，有些人的副作用比较小，效果就比较好；但这种药对其他人可能副作用非常大，很容易破坏他们自身的免疫系统，因此使用后效果并不好。实际上，大部分医生在给癌症患者用药时，需要对患者进行基因比对，以确定是否能用某种抗癌药。
 
-> 其次，更要命的是，癌细胞本身也是变化的，既然细胞在复制时，基因会出一次错，就有可能错第二次、第三次。因此，对一个患者，即便一开始为他找到了一种有效的抗癌药，但是如果癌细胞基因再发生突变，曾经管用的药物也会变得不管用。我们经常会听到这样的故事，有的人得了癌症后，一直控制得很好，病情稳定；一些人甚至看上去已经痊愈了，但是忽然有一天，他的病复发了，然后病情就无法控制，很快就过世了。这其实是因为癌细胞本身变化所造成的。
+### Google内的大数据医疗公司**Calico
 
-> 除此之外还有一个因素也不能忽略，那就是癌症患者即便真的痊愈了（体内一个癌细胞也没有），他们的体质本身可能容易产生病变，不等于今后不会再得癌症，这些人依然是高危群体。
+近年来，很多人都在关注大数据帮助医治癌症的相关课题，这种技术前景到底如何？
 
-**如果针对不同的患者设计特定的抗癌药，成本又很高**：
+我在几年前对这件事做了一些专门的了解，因为当时我在考虑是离开Google，还是换到Google内的大数据医疗公司Calico去。关于大数据医治癌症的相关问题，我非常认同Calico公司CEO李文森博士的观点，在此分享给你。
 
-> 由于上述原因，李文森博士认为，很难找到一种万灵药彻底医治哪怕是一种癌症，这和发明抗生素治愈结核病不同。事实上，即便是基因泰克研制的那些所谓特效抗癌药，也只对一小半人特别管用。要想彻底治愈癌症（或者说让患者和癌细胞长期共存），就需要针对不同的患者设计特定的抗癌药，而且根据这个患者癌细胞每一次新的变化研制新药，只要这个研制速度能够赶得上癌细胞的变化，即使不能够彻底杀死所有的癌细胞，也能控制癌症，让患者长期健康地生活。
+### Calico公司CEO李文森的介绍
 
-> 从理论上讲，这种方法是可行的，但是这样做的成本太高。首先，需要有一个专门的研发团队围绕着每一个患者进行药品的研制，而且研发的速度还要足够快。其次，它的耗费至少在每人10亿美元以上。因此，全世界除了像乔布斯这样的亿万富翁，都不可能用这种方法来治疗癌症。这就是目前人类在抗癌方面遇到的困境，这个困境是无法通过传统的医学进步走出来的。**事实上，在过去的二十多年甚至更长的时间里，全世界医学界对癌症机理的理解和治疗方式的改进是非常有限的**。
+李文森博士到Google之前是世界上最著名的生物医药公司基因泰克的CEO和董事会主席、Google的董事（2004-2009），并且一直担任苹果公司的董事会主席至今，他也是全世界在生物系统领域最权威的专家之一。2013年，李文森博士离开了基因泰克，担任了Calico这家Google全资子公司的CEO。李文森博士对大数据和机器智能帮助延长人类寿命这件事非常看好，他认为这些技术和医学的结合可以治愈很多顽疾，包括癌症。李文森的观点，代表了今天美国医学界的主流观点。
 
-未来的出路：将最新的基因技术和IT技术（尤其是大数据）相结合。如下：
+### 为什么癌症那么难治愈
 
-> 那么出路在哪里呢？李文森博士认为需要依靠将最新的基因技术和IT技术（尤其是大数据）相结合。目前在人和动物身上发现的可能导致肿瘤的基因错误大约有5000种，而癌症的种类不过一百来种，也就是说即使考虑到导致癌变的基因复制错误和各种癌症的全部组合，不过是几百万种。上百万这个数量级在IT领域是非常小的，但是在医学领域则近乎无穷大。如果能利用大数据技术，在这上百万种组合中找到各种真正导致癌变的组合，并且对这样每一种组合都找到相应的药物（这个工作量大到必须依靠机器智能），那么对于所有人可能的病变都能够治疗。
+要讲大数据和机器智能治愈癌症，先要讲为什么癌症那么难治愈。
 
-> 未来，医治癌症的方法可能是这样的，针对不同人不同的病变，只要从药品库中选一种药即可，比如对患者老王，医生根据他的情况给他开了第1203号抗癌药品，如果发生新的病变，经过检查确认后，改用256号药品……，这样并不需要每一次重新研制药品。如此一来，癌症就变成了像感冒式的普通疾病，不再会对生命产生威胁。虽然开发出这样成千上万种药总的研发成本不低，但是如果摊到全世界每一个癌症患者身上，李文森博士估计只需要人均5000美元左右。
+首先，癌症的发病和人有关。癌细胞不像其它的细菌那样来自外部。同一种细菌感染的疾病，致病的细菌通常是相同的（比如肺结核由结核杆菌引起）。癌细胞是我们体内正常细胞在复制时基因出了错而产生的，至于怎么错的，是因人而异的——也就是说同样一种癌症，在不同患者身上基因复制错误可能不相同（这一类和基因相关的病，被认为是由多基因影响的，比较难找出原因，而且每个人都不同；相比之下，像色盲这种遗传病是由单基因引起的，比较容易找到原因，而且大部分患者的原因相同），这就解释了为什么很多抗癌药对一些病人比较灵，对另一些人却没有什么作用，因为他们的癌变其实不同。另外，每一个人的身体条件也不同，同样的抗癌药，有些人的副作用比较小，效果就比较好；但这种药对其他人可能副作用非常大，很容易破坏他们自身的免疫系统，因此使用后效果并不好。实际上，大部分医生在给癌症患者用药时，需要对患者进行基因比对，以确定是否能用某种抗癌药。
 
-人类长寿公司（Human Longevity）走得更快：
+其次，更要命的是，癌细胞本身也是变化的，既然细胞在复制时，基因会出一次错，就有可能错第二次、第三次。因此，对一个患者，即便一开始为他找到了一种有效的抗癌药，但是如果癌细胞基因再发生突变，曾经管用的药物也会变得不管用。我们经常会听到这样的故事，有的人得了癌症后，一直控制得很好，病情稳定；一些人甚至看上去已经痊愈了，但是忽然有一天，他的病复发了，然后病情就无法控制，很快就过世了。这其实是因为癌细胞本身变化所造成的。
 
-> 在美国，其实还有一家公司在这个方向上比Calico走得更快，它就是由著名科学家、世界上最早从事人类基因组工作的温特博士创立的人类长寿公司（Human Longevity）［这个公司名字起得好］，该公司再和美国很多著名的药厂合作，在新的抗癌药研制和个性化医疗方面都走在世界前列。
+除此之外还有一个因素也不能忽略，那就是癌症患者即便真的痊愈了（体内一个癌细胞也没有），他们的体质本身可能容易产生病变，不等于今后不会再得癌症，这些人依然是高危群体。
 
-> 如果我们沿着李文森和温特的思路继续往下走，不仅仅是治疗癌症，治疗各种疾病都应该可以做到针对不同的人使用不同的药，哪怕是对感冒或者嗓子痛等小毛病。当然，要做到这一点首先要搞清楚看似相同症状的毛病，是否是由同一种病原引起的，如果不是，那么不同患者各自的病原是什么。我今年夏天访问约翰-霍普金斯时，**著名基因学专家萨尔兹伯格教授**向我介绍了他在这方面研究的进展，有机会我再讲给你听，这就涉及到个性化医疗这个大话题了。
+### 如果针对不同的患者设计特定的抗癌药，成本又很高
+
+由于上述原因，李文森博士认为，很难找到一种万灵药彻底医治哪怕是一种癌症，这和发明抗生素治愈结核病不同。事实上，即便是基因泰克研制的那些所谓特效抗癌药，也只对一小半人特别管用。要想彻底治愈癌症（或者说让患者和癌细胞长期共存），就需要针对不同的患者设计特定的抗癌药，而且根据这个患者癌细胞每一次新的变化研制新药，只要这个研制速度能够赶得上癌细胞的变化，即使不能够彻底杀死所有的癌细胞，也能控制癌症，让患者长期健康地生活。
+
+从理论上讲，这种方法是可行的，但是这样做的成本太高。首先，需要有一个专门的研发团队围绕着每一个患者进行药品的研制，而且研发的速度还要足够快。其次，它的耗费至少在每人10亿美元以上。因此，全世界除了像乔布斯这样的亿万富翁，都不可能用这种方法来治疗癌症。这就是目前人类在抗癌方面遇到的困境，这个困境是无法通过传统的医学进步走出来的。**事实上，在过去的二十多年甚至更长的时间里，全世界医学界对癌症机理的理解和治疗方式的改进是非常有限的**。
+
+### 未来的出路：将最新的基因技术和IT技术（尤其是大数据）相结合
+
+那么出路在哪里呢？李文森博士认为需要依靠将最新的基因技术和IT技术（尤其是大数据）相结合。目前在人和动物身上发现的可能导致肿瘤的基因错误大约有5000种，而癌症的种类不过一百来种，也就是说即使考虑到导致癌变的基因复制错误和各种癌症的全部组合，不过是几百万种。上百万这个数量级在IT领域是非常小的，但是在医学领域则近乎无穷大。如果能利用大数据技术，在这上百万种组合中找到各种真正导致癌变的组合，并且对这样每一种组合都找到相应的药物（这个工作量大到必须依靠机器智能），那么对于所有人可能的病变都能够治疗。
+
+未来，医治癌症的方法可能是这样的，针对不同人不同的病变，只要从药品库中选一种药即可，比如对患者老王，医生根据他的情况给他开了第1203号抗癌药品，如果发生新的病变，经过检查确认后，改用256号药品……，这样并不需要每一次重新研制药品。如此一来，癌症就变成了像感冒式的普通疾病，不再会对生命产生威胁。虽然开发出这样成千上万种药总的研发成本不低，但是如果摊到全世界每一个癌症患者身上，李文森博士估计只需要人均5000美元左右。
+
+### 人类长寿公司（Human Longevity）走得更快
+
+在美国，其实还有一家公司在这个方向上比Calico走得更快，它就是由著名科学家、世界上最早从事人类基因组工作的温特博士创立的人类长寿公司（Human Longevity）［这个公司名字起得好］，该公司再和美国很多著名的药厂合作，在新的抗癌药研制和个性化医疗方面都走在世界前列。
+
+如果我们沿着李文森和温特的思路继续往下走，不仅仅是治疗癌症，治疗各种疾病都应该可以做到针对不同的人使用不同的药，哪怕是对感冒或者嗓子痛等小毛病。当然，要做到这一点首先要搞清楚看似相同症状的毛病，是否是由同一种病原引起的，如果不是，那么不同患者各自的病原是什么。我今年夏天访问约翰-霍普金斯时，**著名基因学专家萨尔兹伯格教授**向我介绍了他在这方面研究的进展，有机会我再讲给你听，这就涉及到个性化医疗这个大话题了。
 
 即便癌症能够治愈，人类的平均寿命只能增加3.5岁，人类未来面临的最大问题是**老年痴呆**等衰老问题。这就有点搞笑了：
 
-> 我相信在我们有生之年，是可以看到人类解决医治癌症这个难题的。不过，即便癌症能够治愈，人类的平均寿命只能增加3.5岁，人类未来面临的最大问题是老年痴呆等衰老问题。有些时候我在想，我们生命的质量可能比长度更重要。
+我相信在我们有生之年，是可以看到人类解决医治癌症这个难题的。不过，即便癌症能够治愈，人类的平均寿命只能增加3.5岁，人类未来面临的最大问题是老年痴呆等衰老问题。有些时候我在想，我们生命的质量可能比长度更重要。
 
-
-
-### 20181015-第006封信丨破解上帝的密码
+## 20181015-第006封信丨破解上帝的密码
 
 > 上封信，我们聊了用大数据治愈癌症的相关话题，信的结尾处我提到癌症能否治愈需要重点攻克两个问题：1.个性化医疗；2.衰老问题。这封信，想进一步跟你聊聊这些问题。
 
