add:公众号推荐

--- a/04-公众号推荐/01-公众号推荐.md
+++ b/04-公众号推荐/01-公众号推荐.md
@@ -1,6 +1,6 @@
 
 
-> 更多良心公众号推荐，欢迎提交issues。
+> 更多良心公众号推荐，欢迎提交 issues 补充。
 
 ## 互联网领域
 
@@ -9,12 +9,6 @@
 - 小道消息
 
 互联网领域里，最有影响力的大V。
-
-
-- keso怎么看
-
-互联网领域里，辈分最大的大V。
-
 
 - 槽边往事
 
@@ -30,12 +24,15 @@
 
 他的文章虽然更新很慢，但从不追热点，且每篇文章都不过时。
 
-
 ### 二线自媒体大V
 
 - MacTalk
 
 广告太多，只好退居二线。
+
+- keso怎么看
+
+互联网领域里，辈分最大的大V。
 
 - 三表龙门阵
 
@@ -43,18 +40,21 @@
 
 - 扯氮集
 
-这个大V，一天至少发十条朋友圈。
+对互联网和新媒体有深刻独到的见解。这个大V，一天至少发十条朋友圈。
 
+- 半佛仙人
+
+讲风控相关的内容很专业。
+
+- 望月的博客
+
+态度很温和。他的朋友圈，是我重要的信息源。
+
+### 三线自媒体大V
 
 - 阑夕
 
 别看他的公众号文章一本正经，他在微博上可是段子手。
-
-
-- 望月的博客
-
-
-态度很温和。他的朋友圈，是我重要的信息源。
 
 - 卢泓言
 
@@ -62,9 +62,13 @@
 
 《腾讯没有梦想》，就是这位写的。
 
-
 - 起朱楼宴宾客
 
+- 梁宁-闲花照水录
+
+- 投资人子柳
+
+- 计算广告
 
 ### 互联网资讯
 
@@ -76,8 +80,9 @@
 
 - 接招
 
+### 产品类
 
-
+- 人人都是产品经理
 
 ### 软件推荐
 
@@ -87,42 +92,68 @@
 
 - 知晓程序
 
+### 效率工具（个人号）
 
+- 网罗灯下黑
+
+- 码力全开工作室
 
 ### 程序员开的公众号
-
 
 - 阮一峰的网络日志
 
 阿里P7。对前端人贡献和帮助最大的人，就是阮一峰老师，没有之一。
 
+- 码农翻身
 
+Java领域的大号。
+
+- 纯洁的微笑
+
+博客园的Java大佬。
+
+- 大飞码字
+
+在腾讯工作十年，其中在微信部门就待了八年。
 
 ### 人工智能相关
 
 - 机器之心
 
-
 ### 更新很慢的公众号
 
 > 更新很慢，但是内容不错。
-
 
 - 可能吧
 
 - 歪理邪说
 
+- 二爷荐书
+
 - 对对对你们都是业内
 
+- 王信文
+
+每周一篇，坚持了一年。品控很好。
+
+- 给产品经理讲技术
 
 ## 非互联网领域
-
 
 ### 自媒体大V
 
 - 雾满拦江
 
 - 六神磊磊读唐诗
+
+- 肥肥猫的小酒馆
+
+### 二线自媒体大V
+
+- L先生说
+
+- 记忆承载
+
 
 ### 有深度的公众号
 
@@ -138,23 +169,19 @@
 
 - 大象公会
 
-
 ### 科普类
 
 - 酷玩实验室
 
 - 局部气候调查局
 
-
 ### 经济类
-
-- 老钱说钱
 
 - 刘备教授
 
-- 猫哥的视界
-
 - 宁南山
+
+- 猫哥的视界
 
 - 城市战争
 
@@ -166,11 +193,15 @@
 
 - 子木聊房
 
+### 时政类
+
+- 卢克文工作室
 
 ### 理财
 
-- 简七理财
+- 老钱说钱
 
+- 关哥说险
 
 ### 电影
 
@@ -178,16 +209,23 @@
 
 ### 娱乐
 
+- 深八深夜八卦
+
+- 新氧
+
 - 金融八卦女频道
 
-
-### 历史类
+### 历史、文化类
 
 - 地球知识局
 
 - 星球研究所
 
 - 馒头说
+
+- 土摩托看世界
+
+土摩托是三联周刊的编辑。
 
 - 混子曰（yue）
 
@@ -196,40 +234,6 @@
 - 毕导
 
 - 小声比比
-
-## 待观察的公众号
-
-### 历史类
-
-- 国家人文历史
-
-- 短史记
-
-- 坐井观天
-
-- 布鲁科夫
-
-### 经济类
-
-- 源五郎（id：fengzixiaowu）
-
-最早是在知乎上看到他推荐了两本书《写在房价暴涨前》、《中国是部金融史》。这两本书确实不错，但是，源五郎这个公众号的内容，就比较一般了。
-
-
-## 文字略奇怪的公众号
-
-> 这类公众号，看多了之后，感觉都是同一种调调。当然，不否认其影响力。
-
-- 兽楼处
-
-- 包邮区
-
-- 老道消息
-
-- 星球商业评论
-
-- 真理规划局
-
 
 
 
