--- a/04-公众号推荐/01-公众号推荐.md
+++ b/04-公众号推荐/01-公众号推荐.md
@@ -1,6 +1,6 @@
 
 
-> 更多良心公众号推荐，欢迎提交 issues 补充。
+> 推荐一些内容不错的公众号。读者朋友们不需要挨个关注，选一部分感兴趣的看看就好。切记：**少即是多**。 更多良心公众号推荐，欢迎留言补充。
 
 ## 互联网领域
 
@@ -29,10 +29,6 @@
 - MacTalk
 
 广告太多，只好退居二线。
-
-- keso怎么看
-
-互联网领域里，辈分最大的大V。
 
 - 三表龙门阵
 
@@ -161,6 +157,7 @@ Java领域的大号。
 
 - 孤独大脑
 
+
 ### 资讯类
 
 - 浪潮工作室
@@ -169,13 +166,15 @@ Java领域的大号。
 
 - 大象公会
 
+- 新闻实验室
+
 ### 科普类
 
 - 酷玩实验室
 
 - 局部气候调查局
 
-### 经济类
+### 财经类
 
 - 刘备教授
 
@@ -183,11 +182,19 @@ Java领域的大号。
 
 - 猫哥的视界
 
+- 饭统戴老板
+
+- 招财大牛猫
+
+- 老钱说钱
+
+- 关哥说险
+
+- 孟岩
+
 - 城市战争
 
 - 大玩家张磊
-
-- 饭统戴老板
 
 - 港股那点事
 
@@ -196,12 +203,6 @@ Java领域的大号。
 ### 时政类
 
 - 卢克文工作室
-
-### 理财
-
-- 老钱说钱
-
-- 关哥说险
 
 ### 电影
 
@@ -223,6 +224,12 @@ Java领域的大号。
 
 - 馒头说
 
+作者的文章合集已经整理成书：《历史的温度》。
+
+-喻以流年
+
+讲解《资治通鉴》中的历史。
+
 - 土摩托看世界
 
 土摩托是三联周刊的编辑。
@@ -234,6 +241,10 @@ Java领域的大号。
 - 毕导
 
 - 小声比比
+
+更多良心公众号推荐，欢迎留言补充。
+
+
 
 
 
