--- a/我的信息源.md
+++ b/我的信息源.md
@@ -1,37 +1,22 @@
 
 
+## 播客
 
+- IT 公论：<https://itgonglun.com/>
 
+播出时间：2013.11–2016.4。
 
-## 公众号
-
-> 名单随时会变。更多公众号推荐，可以看本项目的其他相关文件夹。
-
-
-- 馒头说
-
-
-
-
-
-
-
-
-
-
+- 内核恐慌：<https://kernelpanic.fm/>
 
 ## 网站
-
 
 - 利器：<http://liqi.io/>
 
 采访优秀的创造者，分享他们在工作时所使用的工具，以及使用工具的方式和原则。也可以关注相应的公众号。
 
-
 - 华尔街见闻：
 
 里面的有些主题还是不错的。例如：[朋友圈精华财经热文放送](https://wallstreetcn.com/themes/1004243)、[好书荐读](https://wallstreetcn.com/themes/1004405)
-
 
 
 - 湾区日报：<https://wanqu.co>
