--- a/03-推荐文章/2018-09-优质文章推荐.md
+++ b/03-推荐文章/2018-09-优质文章推荐.md
@@ -2,8 +2,6 @@
 
 ## 2019-09-优质文章推荐
 
-
-
 ### 2018-09-12
 
 
@@ -115,7 +113,9 @@
 
 ### 2018-09-15
 
-- [《》]()
+- [《三步完美解决 Markdown 图床问题》](https://mp.weixin.qq.com/s/ZQtrlULJ5mNTd8jMCb5yEg)
+
+关于 PicGo 的使用步骤。
 
 - [《》]()
 
