--- a/07-推荐链接/01-推荐博客.md
+++ b/07-推荐链接/01-推荐博客.md
@@ -1,26 +1,17 @@
 
 
 
-
-
-
-
 ## 综合类
 
 - 王五四：<http://wang54.blogspot.com>
 
-
 - <http://www.lijigang.com/>
 
-
-
-
-
+- <http://linxinglu.com/>
 
 ## 综合技术类
 
 > 博客的内容是综合类，但博主都是技术出身。
-
 
 - 编程随想：<https://program-think.blogspot.com>
 
@@ -30,5 +21,11 @@
 
 博客的标题很有意思：当然我在扯淡。
 
+- 云风：<https://blog.codingnow.com/>
+
+吴云洋（Cloud），网名云风，毕业于中南大学，原网易游戏核心成员、杭州研究中心总监，是网易《大话西游》、《梦幻西游》等游戏的重要开发者。2011年9月5日宣布已从网易辞职。
+
+2015年写了一本书《[游戏之旅](https://book.douban.com/subject/1441780/)》
 
 - 纯洁的微笑：<http://www.ityouknow.com>
+
