--- a/01-文章推荐/2019年-优质文章推荐.md
+++ b/01-文章推荐/2019年-优质文章推荐.md
@@ -1,7 +1,6 @@
 
 
-## 2019-01优质文章推荐
-
+## 2019-01-优质文章推荐
 
 ### 2019-01-01
 
@@ -489,11 +488,712 @@
 - [《两位图灵奖得主万字长文：新计算机架构，黄金十年爆发》](https://mp.weixin.qq.com/s/Y9_-AEqxtSJ2SQvYdk7Yhg)
 
 
-### 2017-01-31
+### 2019-01-31
 
 
 - [《春节发微信红包完全手册》](https://mp.weixin.qq.com/s/A4Ipnz93vFFUyrSUkMR_ZQ)
 
 
 - [《一个出身寒门的状元之编程》](https://mp.weixin.qq.com/s/GPGtDQ0wuNwmIUOYSGgJ9Q)
+
+
+
+
+
+## 2019-02-优质文章推荐
+
+
+### 2019-02-01
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-02-02
+
+
+- [《超低生育率养成记》](https://mp.weixin.qq.com/s/C80z5B1jl2D3HO4PwYf2fg)
+
+人口是影响中国长期经济发展的最重要变量。从经济学家，财经评论者，到投资人，18年开始相关文章越来越多，这篇则是分析较为全面的。
+
+
+
+### 2019-02-03
+
+- [《互联网公司春联大集合，太特么有才了》](https://mp.weixin.qq.com/s/c8X5bYwaLpRKkTHSxBofjg)
+
+- [《》]()
+
+- [《》]()
+
+
+- [《》]()
+
+
+### 2019-02-04
+
+- [《2019我想一夜暴富，不行的话，抱你一夜也可以》](https://mp.weixin.qq.com/s/Q2rv0kR4d8t3bU2dnrtNuA)
+
+- [《记住这4个时间，抢9亿百度春晚红包！ | 官方攻略》](https://mp.weixin.qq.com/s/S-Ks5HHXKOe5HO4FeU0uHw)
+
+- [《今天互联网公司要发35亿红包，这个红包攻略请一定拿好！》](https://mp.weixin.qq.com/s/CHikEXqZKuRd0Iw_yUF_uw)
+
+- [《》]()
+
+
+### 2019-02-05
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-02-06
+
+- [《孤独大脑 | 时间在哪儿？》](https://mp.weixin.qq.com/s/nkwbn8dp2oUVpWz1QsLF5w)
+
+- [《》]()
+
+
+
+### 2019-02-07
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-02-08
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-02-09
+
+- [《》]()
+
+- [《》]()
+
+
+
+### 2019-02-10
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-02-11
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-02-12
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-02-13
+
+- [《》]()
+
+- [《》]()
+
+### 2019-02-14
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-02-15
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-02-16
+
+- [《》]()
+
+- [《》]()
+
+
+
+### 2019-02-16
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-02-17
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-02-18
+
+- [《》]()
+
+- [《》]()
+
+### 2019-02-19
+
+- [《》]()
+
+- [《》]()
+
+### 2019-02-20
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-02-21
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-02-22
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-02-23
+
+- [《界面 | 知乎大V的再次出走》](https://www.jiemian.com/article/2884999.html) 【荐】
+
+- [《》]()
+
+
+### 2019-02-24
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-02-25
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-02-26
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-02-27
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-02-28
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-02-29
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-02-30
+
+- [《》]()
+
+- [《》]()
+
+
+
+## 其他
+
+
+
+- [《周星驰：那个拍喜剧的偏执狂，正在丧失自我吗？》](https://mp.weixin.qq.com/s/Q1aZkdKDm-9vudVI2yEkiw)
+
+
+- [《莫言：我的写作还能成长》](http://guangmingdaily.cn/03pindao/shuping/2004-04/19/content_14514.htm)
+
+
+
+
+## 2019-03-优质文章推荐
+
+
+### 2019-03-01
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-03-02
+
+- [《》]()
+
+- [《》]()
+
+### 2019-03-03
+
+- [《》]()
+
+- [《》]()
+
+### 2019-03-04
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-03-05
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-03-06
+
+- [《》]()
+
+- [《》]()
+
+
+
+### 2019-03-07
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-03-08
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-03-09
+
+- [《》]()
+
+- [《》]()
+
+
+
+### 2019-03-10
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-03-11
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-03-12
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-03-13
+
+- [《》]()
+
+- [《》]()
+
+### 2019-03-14
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-03-15
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-03-16
+
+- [《》]()
+
+- [《》]()
+
+
+
+### 2019-03-16
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-03-17
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-03-18
+
+- [《》]()
+
+- [《》]()
+
+### 2019-03-19
+
+- [《》]()
+
+- [《》]()
+
+### 2019-03-20
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-03-21
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-03-22
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-03-23
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-03-24
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-03-25
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-03-26
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-03-27
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-03-28
+
+- [《屏幕占据了穷人的生活，富人却对它们说不》](https://cn.nytimes.com/technology/20190328/human-contact-luxury-screens/) 【荐】
+
+文章来自纽约时报中文网。一个有意思的观点是：随着富裕家庭的孩子用于屏幕的时间越来越少，贫困家庭的孩子用于屏幕的时间却越来越多。一个人对人际交往的适应程度，可能会成为一个新的阶级标识。
+
+- [《》]()
+
+### 2019-03-29
+
+- [《》]()
+
+- [《》]()
+
+### 2019-03-30
+
+- [《》]()
+
+- [《》]()
+
+
+
+
+## 2019-06-优质文章推荐
+
+
+### 2019-06-01
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-06-02
+
+- [《》]()
+
+- [《》]()
+
+### 2019-06-03
+
+- [《》]()
+
+- [《》]()
+
+### 2019-06-04
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-06-05
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-06-06
+
+- [《》]()
+
+- [《》]()
+
+
+
+### 2019-06-07
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-06-08
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-06-09
+
+- [《》]()
+
+- [《》]()
+
+
+
+### 2019-06-10
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-06-11
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-06-12
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-06-13
+
+- [《》]()
+
+- [《》]()
+
+### 2019-06-14
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-06-15
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-06-16
+
+- [《》]()
+
+- [《》]()
+
+
+
+### 2019-06-16
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-06-17
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-06-18
+
+- [《》]()
+
+- [《》]()
+
+### 2019-06-19
+
+- [《》]()
+
+- [《》]()
+
+### 2019-06-20
+
+- [《【人物】那些年李笑来教给了我们什么？》](https://mp.weixin.qq.com/s/nZBuYK2iwPqVecOi1eh3RA) 【荐】
+
+- [《》]()
+
+### 2019-06-21
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-06-22
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-06-23
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-06-24
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-06-25
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-06-26
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-06-27
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-06-28
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-06-29
+
+- [《》]()
+
+- [《》]()
+
+
+### 2019-06-30
+
+
+- [《》]()
+
+- [《》]()
+
+## 2019-08-优质文章推荐
+
+### 2019-08-21
+
+- [《关于创业，资源，市场，以及商业策略》](https://mp.weixin.qq.com/s/n2hI5vsjA7_NJXk0iIYujw)
+
+
+## 2019-12-优质文章推荐
+
+
+### 2019-12-01
+
+- [《》]()
+
+- [《》]()
 
