--- a/01-文章推荐/2019年-优质文章推荐.md
+++ b/01-文章推荐/2019年-优质文章推荐.md
@@ -556,125 +556,6 @@
 - [《》]()
 
 
-
-### 2019-02-07
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-02-08
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-02-09
-
-- [《》]()
-
-- [《》]()
-
-
-
-### 2019-02-10
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-02-11
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-02-12
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-02-13
-
-- [《》]()
-
-- [《》]()
-
-### 2019-02-14
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-02-15
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-02-16
-
-- [《》]()
-
-- [《》]()
-
-
-
-### 2019-02-16
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-02-17
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-02-18
-
-- [《》]()
-
-- [《》]()
-
-### 2019-02-19
-
-- [《》]()
-
-- [《》]()
-
-### 2019-02-20
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-02-21
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-02-22
-
-- [《》]()
-
-- [《》]()
-
-
 ### 2019-02-23
 
 - [《界面 | 知乎大V的再次出走》](https://www.jiemian.com/article/2884999.html) 【荐】
@@ -682,264 +563,14 @@
 - [《》]()
 
 
-### 2019-02-24
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-02-25
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-02-26
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-02-27
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-02-28
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-02-29
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-02-30
-
-- [《》]()
-
-- [《》]()
-
-
-
 ## 其他
-
-
 
 - [《周星驰：那个拍喜剧的偏执狂，正在丧失自我吗？》](https://mp.weixin.qq.com/s/Q1aZkdKDm-9vudVI2yEkiw)
 
 
 - [《莫言：我的写作还能成长》](http://guangmingdaily.cn/03pindao/shuping/2004-04/19/content_14514.htm)
 
-
-
-
 ## 2019-03-优质文章推荐
-
-
-### 2019-03-01
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-03-02
-
-- [《》]()
-
-- [《》]()
-
-### 2019-03-03
-
-- [《》]()
-
-- [《》]()
-
-### 2019-03-04
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-03-05
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-03-06
-
-- [《》]()
-
-- [《》]()
-
-
-
-### 2019-03-07
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-03-08
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-03-09
-
-- [《》]()
-
-- [《》]()
-
-
-
-### 2019-03-10
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-03-11
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-03-12
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-03-13
-
-- [《》]()
-
-- [《》]()
-
-### 2019-03-14
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-03-15
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-03-16
-
-- [《》]()
-
-- [《》]()
-
-
-
-### 2019-03-16
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-03-17
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-03-18
-
-- [《》]()
-
-- [《》]()
-
-### 2019-03-19
-
-- [《》]()
-
-- [《》]()
-
-### 2019-03-20
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-03-21
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-03-22
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-03-23
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-03-24
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-03-25
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-03-26
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-03-27
-
-- [《》]()
-
-- [《》]()
-
 
 ### 2019-03-28
 
@@ -949,235 +580,11 @@
 
 - [《》]()
 
-### 2019-03-29
-
-- [《》]()
-
-- [《》]()
-
-### 2019-03-30
-
-- [《》]()
-
-- [《》]()
-
-
-
-
 ## 2019-06-优质文章推荐
-
-
-### 2019-06-01
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-06-02
-
-- [《》]()
-
-- [《》]()
-
-### 2019-06-03
-
-- [《》]()
-
-- [《》]()
-
-### 2019-06-04
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-06-05
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-06-06
-
-- [《》]()
-
-- [《》]()
-
-
-
-### 2019-06-07
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-06-08
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-06-09
-
-- [《》]()
-
-- [《》]()
-
-
-
-### 2019-06-10
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-06-11
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-06-12
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-06-13
-
-- [《》]()
-
-- [《》]()
-
-### 2019-06-14
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-06-15
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-06-16
-
-- [《》]()
-
-- [《》]()
-
-
-
-### 2019-06-16
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-06-17
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-06-18
-
-- [《》]()
-
-- [《》]()
-
-### 2019-06-19
-
-- [《》]()
-
-- [《》]()
 
 ### 2019-06-20
 
 - [《【人物】那些年李笑来教给了我们什么？》](https://mp.weixin.qq.com/s/nZBuYK2iwPqVecOi1eh3RA) 【荐】
-
-- [《》]()
-
-### 2019-06-21
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-06-22
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-06-23
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-06-24
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-06-25
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-06-26
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-06-27
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-06-28
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-06-29
-
-- [《》]()
-
-- [《》]()
-
-
-### 2019-06-30
-
-
-- [《》]()
 
 - [《》]()
 
@@ -1187,9 +594,19 @@
 
 - [《关于创业，资源，市场，以及商业策略》](https://mp.weixin.qq.com/s/n2hI5vsjA7_NJXk0iIYujw)
 
+- [《2019中国民营企业500强榜单》](https://mp.weixin.qq.com/s/SC2G0fY6OvO_C-8vZbpnkQ)
+
+备注：（1）根据此次民企500强的评选条件，参评企业必须是私营企业、非公有制经济成分控股的有限责任公司和股份有限公司，而腾讯和阿里巴巴均被算为外企，所以无法参选。实际上，目前腾讯的第一大股东是南非MIH集团，阿里巴巴的第一大股东则是日本软银。
+
+（2）除了公司大部分股权都在国外，还有一个原因，就是腾讯和阿里巴巴的注册地都不在中国，而是在位于**加勒比海西北部的开曼群岛**上。那么为什么要选择开曼群岛？因为在开曼群岛只要年龄到达18岁便可以注册成立一家有限公司，公司需要1个股东和1个董事，而且注册资本只需要5万美元，还不需要验资，这样的条件对于一个企业来说就是圣地。
+
+另外开曼群岛的税收相当低，据悉在开曼群岛，只收进口税、工商登记税、旅游者税等几个简单的税种，而我们常见的人所得税、企业所得税等等在这里都没有，相比之下在所得税方面，中国内地税率为25%。仅这一条，就吸引了不少知名企业把注册地从其他地方转到了这里。
+
+
+
+
 
 ## 2019-12-优质文章推荐
-
 
 ### 2019-12-01
 
