add: product daily

--- a/01-文章推荐/2019年-优质文章推荐.md
+++ b/01-文章推荐/2019年-优质文章推荐.md
@@ -596,7 +596,9 @@
 
 - [《2019中国民营企业500强榜单》](https://mp.weixin.qq.com/s/SC2G0fY6OvO_C-8vZbpnkQ)
 
-备注：（1）根据此次民企500强的评选条件，参评企业必须是私营企业、非公有制经济成分控股的有限责任公司和股份有限公司，而腾讯和阿里巴巴均被算为外企，所以无法参选。实际上，目前腾讯的第一大股东是南非MIH集团，阿里巴巴的第一大股东则是日本软银。
+备注：
+
+（1）根据此次民企500强的评选条件，参评企业必须是私营企业、非公有制经济成分控股的有限责任公司和股份有限公司，而腾讯和阿里巴巴均被算为外企，所以无法参选。实际上，目前腾讯的第一大股东是南非MIH集团，阿里巴巴的第一大股东则是日本软银。
 
 （2）除了公司大部分股权都在国外，还有一个原因，就是腾讯和阿里巴巴的注册地都不在中国，而是在位于**加勒比海西北部的开曼群岛**上。那么为什么要选择开曼群岛？因为在开曼群岛只要年龄到达18岁便可以注册成立一家有限公司，公司需要1个股东和1个董事，而且注册资本只需要5万美元，还不需要验资，这样的条件对于一个企业来说就是圣地。
 
