add: product daily

--- a/01-文章推荐/2019年-优质文章推荐.md
+++ b/01-文章推荐/2019年-优质文章推荐.md
@@ -580,6 +580,26 @@
 
 - [《》]()
 
+
+## 2019-04-优质文章推荐
+
+
+### 2019-04-07
+
+中文排版指南：
+
+
+- [《中文技术文档的写作规范》](https://github.com/ruanyf/document-style-guide)
+
+- [《中文文案排版指北》](https://github.com/sparanoid/chinese-copywriting-guidelines)
+
+- [《写给大家看的中文排版指南》](https://zhuanlan.zhihu.com/p/20506092)
+
+- [《中文排版指南》](https://github.com/ctf-wiki/ctf-wiki/wiki/%E4%B8%AD%E6%96%87%E6%8E%92%E7%89%88%E6%8C%87%E5%8D%97)
+
+- [《README文档的规范写法》](https://github.com/AweiLoveAndroid/CommonDevKnowledge/blob/master/github_README/README%E6%96%87%E6%A1%A3%E7%9A%84%E8%A7%84%E8%8C%83%E5%86%99%E6%B3%95.md)
+
+
 ## 2019-06-优质文章推荐
 
 ### 2019-06-20
