--- a/03-优质信息源/小道消息文摘2012.md
+++ b/03-优质信息源/小道消息文摘2012.md
@@ -1,5 +1,21 @@
 
 
+
+## 小道消息推荐文章目录
+
+> 个人很喜欢阅读公众号「小道消息」的文字。特推荐一些个人认为质量很高的文章。
+
+
+推荐链接：
+
+- 小道消息早期文章：<https://hutu.me/page/49/>
+
+
+
+###
+
+
+
 ## 文章目录-2012年份
 
 | 文章标题 | 链接 | 个人评价 |
