update:优质信息源

--- a/03-优质信息源/02-公众号推荐.md
+++ b/03-优质信息源/02-公众号推荐.md
@@ -68,9 +68,11 @@
 
 ### 互联网资讯
 
+- 36氪
+
 - 虎嗅网
 
-- 36氪
+虎嗅网的很多文章过于标题党、抢眼。他们自家编辑写的文章很一般，但转载的文章还不错。
 
 - PingWest品玩
 
@@ -79,6 +81,8 @@
 ### 产品类
 
 - 人人都是产品经理
+
+- Product Daily
 
 ### 软件推荐
 
@@ -150,13 +154,11 @@ Java领域的大号。
 
 - 记忆承载
 
-
 ### 有深度的公众号
 
 - 明白知识
 
 - 孤独大脑
-
 
 ### 资讯类
 
@@ -173,6 +175,18 @@ Java领域的大号。
 - 酷玩实验室
 
 - 局部气候调查局
+
+- 有趣的制造
+
+### 视频类
+
+- 一席
+
+- 回形针PaperClip
+
+- 李自然说
+
+- 箭厂
 
 ### 财经类
 
@@ -214,8 +228,6 @@ Java领域的大号。
 
 - 新氧
 
-- 金融八卦女频道
-
 ### 历史、文化类
 
 - 地球知识局
@@ -243,9 +255,6 @@ Java领域的大号。
 - 小声比比
 
 更多良心公众号推荐，欢迎留言补充。
-
-
-
 
 
 
