--- a/03-优质信息源/03-网站推荐.md
+++ b/03-优质信息源/03-网站推荐.md
@@ -2,8 +2,17 @@
 
 
 
+- 华尔街见闻：
+
+里面的有些主题还是不错的。例如：[朋友圈精华财经热文放送](https://wallstreetcn.com/themes/1004243)、[好书荐读](https://wallstreetcn.com/themes/1004405)
+
+
+- 湾区日报：<https://wanqu.co>
+
+每天推荐5篇优质的**英文文章**。很有心。“世界上有太多看起来简单的东西，其实都不简单。只有自己做了才知道”。
+
+
+
 - P大叔：<http://pdfuncle.com>
 
 导出公众号文章。
-
-
