--- a/03-优质信息源/05-播客推荐.md
+++ b/03-优质信息源/05-播客推荐.md
@@ -1,10 +1,14 @@
 
 
 
-### 2019-03-04
+## 播客推荐
 
 - [播客 | 极客电台](https://player.fm/series/series-1528255)
 
-才发现这个播客节目，相见恨晚。iTunes上的博客不完整，但是这个链接上可以收听完整版。
+2019-03-04 才发现这个播客节目，相见恨晚。iTunes上的博客不完整，但是这个链接上可以收听完整版。
 
+- IT 公论：<https://itgonglun.com/>
 
+播出时间：2013.11–2016.4。
+
+- 内核恐慌：<https://kernelpanic.fm/>
