add: product daily

--- a/01-文章推荐/2019年-优质文章推荐.md
+++ b/01-文章推荐/2019年-优质文章推荐.md
@@ -624,9 +624,9 @@
 
 另外开曼群岛的税收相当低，据悉在开曼群岛，只收进口税、工商登记税、旅游者税等几个简单的税种，而我们常见的人所得税、企业所得税等等在这里都没有，相比之下在所得税方面，中国内地税率为25%。仅这一条，就吸引了不少知名企业把注册地从其他地方转到了这里。
 
+### 2019-08-26
 
-
-
+- [《全面解读深圳医保，请务必收藏丨附思维导图》](https://mp.weixin.qq.com/s/3ZD5iFIt0AGJLfBV_WZe7A)
 
 ## 2019-12-优质文章推荐
 
