add: product daily

--- a/03-优质信息源/04-博客推荐.md
+++ b/03-优质信息源/04-博客推荐.md
@@ -9,6 +9,10 @@
 
 - <http://linxinglu.com/>
 
+- 落园：<http://www.loyhome.com/>
+
+专注经济视角下的互联网。
+
 ## 综合技术类
 
 > 博客的内容是综合类，但博主都是技术出身。
@@ -29,3 +33,9 @@
 
 - 纯洁的微笑：<http://www.ityouknow.com>
 
+
+## notion
+
+- [产品沉思录精华索引](https://www.notion.so/a601a12335044f349a22caf57f274c27)
+
+- [优质内容精选集](https://www.notion.so/e1c646324ee54a9f8ae6db8971c01568)
