--- a/01-文章推荐/2019年-优质文章推荐.md
+++ b/01-文章推荐/2019年-优质文章推荐.md
@@ -610,6 +610,22 @@
 
 ## 2019-08-优质文章推荐
 
+### 2019-08-08
+
+- [《这是曹将公众号排版的所有秘密！》](https://mp.weixin.qq.com/s/DEUUcO4FhCiIYmh61wGXnw)
+
+曹将眼中的「好看」究竟是什么。答案是：不打扰。
+
+文章排版确实很精美，可以看看，尤其是关于图片处理这部分。
+
+我补充两点：
+
+（1）字体大小可以用 16px 或者  17px。
+
+（2）图片压缩可以用 https://tinypng.com 这个网址，压缩后的效果更清晰。
+
+这类作者，把做PPT的技能应用到了文章配图上，不得不说是个亮点。
+
 ### 2019-08-21
 
 - [《关于创业，资源，市场，以及商业策略》](https://mp.weixin.qq.com/s/n2hI5vsjA7_NJXk0iIYujw)
