--- a/03-优质信息源/03-网站推荐.md
+++ b/03-优质信息源/03-网站推荐.md
@@ -25,3 +25,13 @@
 
 - 爱站（百度权重查询）：<https://www.aizhan.com>
 
+## 公开信息获取
+
+- 2019年全国高等学校名单：<http://www.moe.gov.cn/jyb_xxgk/s5743/s5744/201906/t20190617_386200.html>
+
+
+截至2019年6月15日，全国高等学校共计2956所，其中：普通高等学校2688所（含独立学院257所），成人高等学校268所。
+
+如果你查询的大学信息不在此名单内，那一定是个野鸡大学。
+
+另外，我看了下表格里的2688所普通高等学校，其中本科有1265所、专科有1563所。这说明，专科生的数量跟本科生的数量是相当的。
