--- a/01-文章推荐/2018年-优质文章推荐.md
+++ b/01-文章推荐/2018年-优质文章推荐.md
@@ -1,5 +1,222 @@
 
 
+### 2018-02-13
+
+- [《在春运火车上听神级推销，入迷的我差点坐过站》](https://mp.weixin.qq.com/s/XVRcWUY3y0vf2vTDRxHlcA)
+
+这种封闭式空间 推销效果 比 露天效果要好太多。
+
+
+
+### 2018-03-17
+
+- [《江南愤青：写在李首富退休时的瞎扯淡》](https://mp.weixin.qq.com/s/RsTve9qYCpc_93uRB8NzuQ) 【荐】
+
+
+### 2018-04-20
+
+- [《那些在赚钱方面打通了任督二脉的人》](https://mp.weixin.qq.com/s/yMGA91rtow1ad_rLYTDpEg)
+
+### 2018-05-20
+
+
+- [如何独立思考？这里有一份全指南](https://mp.weixin.qq.com/s/aViJrzywwGkGdN6PTtBfJA)
+
+罗辑思维跨年演讲里，提到的 收藏最多的文章。
+
+
+### 2018-05-30
+
+- [《罗辑思维》500期，一键收藏](https://mp.weixin.qq.com/s/QKQxsiByPx2JvDW3GcLE2Q)
+
+### 2018-06-12
+
+- [《你知道你已被好友删除了吗？微信都是这样偷偷告诉你的》](http://www.sohu.com/a/235365437_100027314)
+
+
+### 2018-06-23
+
+- [《王兴：今年移动互联网会非常惨烈，很多想象不到的公司都会死掉》](http://www.ctoutiao.com/136601.html?from=timeline&isappinstalled=0) 【荐】
+
+王兴最近在内部发表了一则演讲，在演讲里他分享了自己观察到的现象，2017 年预装费和电子市场费用会比 2016 年涨 30%，第一，手机数不涨了，第二，消费者的卸载 App，第三，推广费用涨 30%。整个移动互联网会非常惨烈，很多想象不到的公司都会死掉。
+
+
+### 2018-06-27
+
+- [《你我皆凡人，大家都有病》](https://mp.weixin.qq.com/s/RN57eEB0TNukzY68vR9FeA)
+
+
+### 2018-07-05
+
+- [今年最犀利的毕业演讲：国家命运与个人命运](https://mp.weixin.qq.com/s/5M3QaOHEWol5dPt1G5aAhQ)
+
+### 2018-07-10
+
+- [最好可能性的世界](https://mp.weixin.qq.com/s/4FycBJDODmkYVRbXZnGmYA)
+
+
+### 2018-07-27
+
+- [《浅谈人工智能：现状、任务、构架与统一 | 正本清源》](https://mp.weixin.qq.com/s/3sKfJnPayDCCosKVP3Jz8Q) 【荐】
+
+
+### 2018-08-07
+
+- [《第一次有人把5G讲的这么简单明了》](https://mp.weixin.qq.com/s/0TeJ26x_WBH7-hC71Gq3aA)
+
+### 2018-08-10
+
+- [国内最难考的5个证书](https://www.sohu.com/a/246313183_100107212)
+
+### 2018-09-10
+
+- [《深击|不到4年估值60亿美元 商汤科技值吗？》](https://tech.sina.com.cn/i/2018-09-10/doc-ihivtsym0268129.shtml)
+
+商汤科技，这家做人工智能的公司，发展势头很猛。
+
+
+
+### 2018-09-12
+
+- [《理解数字世界中的纸张：PDF | 科普》](https://sspai.com/post/47092)
+
+尽管 PDF 格式和 Word 格式在实际用途上有诸多重叠之处，但那只是表面现象。从技术角度看，两种格式之间的差异要远远大于 Word 文档和网页之间的差异，甚至还要大于 Word 文档和 Excel 表格之间的差异。
+
+
+- [《三步完美解决 Markdown 图床问题》](https://mp.weixin.qq.com/s/ZQtrlULJ5mNTd8jMCb5yEg)
+
+关于 PicGo 的使用步骤。
+
+
+### 2018-09-20
+
+- [《商汤科技成第五个国家AI开放创新平台》](http://www.bbtnews.com.cn/2018/0920/267000.shtml)
+
+2018-09-10的文章里，也介绍了商汤。
+
+
+### 2018-10-06
+
+- [《腾讯为什么不投资技术》](https://mp.weixin.qq.com/s/qbDm-rJWnUX5EnFVInNXKw)
+
+
+### 2018-10-10
+
+- [《谁在偷窥我们的隐私？》](http://www.ciotimes.com/InfoSecurity/160163.html)
+
+### 2018-10-11
+
+- [《明朝财政不积极》](https://mp.weixin.qq.com/s/-y0ffsRtaEbgjtkHb_07qg)
+
+### 2018-09-20
+
+- [【首发】梁宁万字长文：美团的破局与开局](https://mp.weixin.qq.com/s/5Hydd0uRZjui_FEfR7ntXg)
+
+### 2018-11-07
+
+
+- [《城市竞争的中国局》](https://mp.weixin.qq.com/s/M5sFirHoFvrj0DRgygWNyA)
+
+一篇长文，对格局提升挺有用。
+
+
+
+### 2018-11-16
+
+- [《GitHub 上四万 Star 大佬的求职回忆》](https://mp.weixin.qq.com/s/K9KFrQ14_9fJmc8Ttta4Qg)
+
+这个GitHub项目的地址是<https://github.com/CyC2018/CS-Notes>。作者在2018年参加校招时，拿了BAT、头条等七个大公司的offer，实在厉害。如下：
+
+- 百度，企业智能平台
+
+- 阿里，高德地图，部门已联系，目前还在申报 Offer 中
+
+- 腾讯，IEG 游戏平台，后台研发，SP
+
+- 字节跳动，头条后台研发，SSP
+
+- 华为，Cloud Bu
+
+- 网易游戏，梦幻事业部
+
+- 顺丰科技
+
+
+### 2018-11-20
+
+- [《CSDN | 人工智能的“虚假式繁荣”》](https://mp.weixin.qq.com/s/5y7ztL8QW7n6Ejh0p9J2oQ)
+
+
+
+### 2018-11-21
+
+
+- [《改革40年：始于科学，终于国学》](https://mp.weixin.qq.com/s/vRjET0G0bZXCrfECyiAWGA)
+
+
+
+### 2018-11-22
+
+- [《新商业NEO100 | 专访美团王慧文：觉得公司值钱，有的时候只是种妄念》](https://36kr.com/p/5161599.html) 【荐】
+
+- [《人工智能 | 简单易懂的自动驾驶科普知识》](https://mp.weixin.qq.com/s/NI-YeBVGtMExL6t1oQln6Q)
+
+
+
+### 2018-11-24
+
+
+- [形势](https://mp.weixin.qq.com/s/2Ymb5f4cORKBf2JMy0utgA) 【荐】
+
+这篇分析比较客观，有点像曹政的语气。不是那种制造情绪的。
+
+- [“社交降级”正在吞噬现代年轻人的生命丨今日话题](https://mp.weixin.qq.com/s/5B3AKd25mfYwSFnCFSoxSg)
+
+虽然标题有点沉重，但是内容分析的还可以。
+
+- [Science公布：全世界最前沿的125个科学问题](https://mp.weixin.qq.com/s/skfhF7ET5XQ3_eL27JHEJg)
+
+
+
+### 2018-11-25
+
+- [MIT重新发明飞机：无需燃料，每秒万米喷射带你上天 | Nature封面](https://mp.weixin.qq.com/s/A8N8OeKj-ksDXsu-WbK2Xg)
+
+### 2018-11-26
+
+
+- [通往无尽之路](https://mp.weixin.qq.com/s/tMY5hH2kNha0bQPpKwIdPg)
+
+- [全球学界震动：中国诞生世界首例基因编辑婴儿！南科大团队改写人类进化史，HIV免疫能力与生俱来](https://mp.weixin.qq.com/s/Lk9B6MK8qmDJ1b9yCmC9ZQ)
+
+
+- [《为什么我们常说做to C 的人比较难去做to B ？》](https://mp.weixin.qq.com/s/Ye-nNPQ02Tm8ABSa-WJj_A)
+
+### 2018-11-27
+
+- [《我的八年博士生涯——CMU王赟写在入职Facebook之前》](https://mp.weixin.qq.com/s/TrDYumRxdwWvYS9oc5xGqA) 【荐】
+
+这篇看完，很有感慨。AI领域顶尖的技术人才，大部分分布在 Google 和 Facebook。
+
+- [《他从中产变成流浪汉，却说比从前更富足》](https://www.douban.com/note/698019369/)
+
+不一样的人生。自由的人生，没有羁绊。
+
+
+### 2018-11-29
+
+
+- [《周航：如果当时创业的我，遇到现在做投资人的我，那有多好》](https://36kr.com/p/5163682.html)
+
+- []()
+
+### 2018-11-30
+
+
+- [《二爷鉴书 | 自由与责任 —— 我们是什么样，公司就是什么样》](https://mp.weixin.qq.com/s/3Zrwk9iriDGKLSdfrQxluQ)
+
+《奈飞文化手册》的阅读心得。
+
 
 ## 2018年12月优质文章推荐
 
@@ -204,10 +421,9 @@ keso 转的一篇保险避坑指南，忽略文末的推广，还是挺受用的
 
 - [《借鉴美日：经济下行时，什么行业还在赚钱？》](https://mp.weixin.qq.com/s/T6FasBHZwL3F9N17yijf_A)
 
-- [《》]()
+- [《2018，再见，再也不见》](https://m.gelonghui.com/p/228260)
 
-- [《》]()
-
+基本贯穿了2018年政治经济文化各方面大事。
 
 ### 2019-12-27
 
@@ -217,21 +433,15 @@ keso 转的一篇保险避坑指南，忽略文末的推广，还是挺受用的
 
 - [《微信的自救》](https://mp.weixin.qq.com/s/9hgfWhQp4f4_8TP0CfRGSg)
 
-- [《》]()
-
-- [《》]()
 
 
-- [《》]()
 
 
 ### 2018-12-28
 
 - [《2018，28岁的她从阿里裸辞，选择诗和远方》](https://mp.weixin.qq.com/s/fsrf4QqEfcojLcdTREQhiQ)
 
-- [《》]()
 
-- [《》]()
 
 
 ### 2018-12-29
