--- a/01-文章推荐/2019年-优质文章推荐.md
+++ b/01-文章推荐/2019年-优质文章推荐.md
@@ -23,7 +23,6 @@
 
 ### 2018-01-02
 
-
 - [《张一鸣的APP工厂》](https://mp.weixin.qq.com/s/hbLLgw8Xe7NTpJSZaxcCUw) 【荐】
 
 - [《远望资本程浩：2018年必读的几本商业书》](https://mp.weixin.qq.com/s/IWHSADG8DM0IyJ1LQqcvgg)
@@ -117,7 +116,6 @@
 - [《个人所得税申报相关》](https://special.ziroom.com/2019/gssb/index.html?app_version=6.2.5&os=android&plat=web&from=timeline&isappinstalled=0)
 
 ### 2019-01-05
-
 
 - [《“别难过，我先走啦。”》](https://mp.weixin.qq.com/s/wj0l0u5s2FvG8WwESFmySA) 【荐】
 
@@ -266,16 +264,11 @@
 - [《为什么你的 App 知道你想买什么｜回形针》](https://mp.weixin.qq.com/s/0Mn2DBGq6JLvMjPQdDIAvQ)
 
 
-
-
-
 ### 2019-01-17
-
 
 - [《啥是佩奇》](https://h5.m.taopiaopiao.com/app/dianying/pages/show-preview/index.html?showid=1286549&previewid=218274262135&from=timeline&isappinstalled=0) 【荐】
 
 这个视频火了。
-
 
 - [《互联网黑话指南》](https://mp.weixin.qq.com/s/9rBpEm222HLrS82KONNtrQ) 【荐】
 
@@ -602,6 +595,12 @@
 
 ## 2019-06-优质文章推荐
 
+### 2019-06-06
+
+- [我在京东购买的商品，是怎么出现在抖音里面的？](https://mp.weixin.qq.com/s/qOo2Vb3FwCI3AsfJSoENBg)
+
+介绍了cps、dsp等常见感念。
+
 ### 2019-06-20
 
 - [《【人物】那些年李笑来教给了我们什么？》](https://mp.weixin.qq.com/s/nZBuYK2iwPqVecOi1eh3RA) 【荐】
@@ -642,7 +641,40 @@
 
 ### 2019-08-26
 
-- [《全面解读深圳医保，请务必收藏丨附思维导图》](https://mp.weixin.qq.com/s/3ZD5iFIt0AGJLfBV_WZe7A)
+- [《全面解读深圳医保，请务必收藏丨附思维导图》](https://mp.weixin.qq.com/s/3ZD5iFIt0AGJLfBV_WZe7A) 【荐】
+
+关于深圳医保，写得比较详细。
+
+
+## 2019-09-优质文章推荐
+
+### 2019-09-18
+
+- [《轻松上手写作利器 Markdown：从此文章排版无烦恼》](https://mp.weixin.qq.com/s/s2NAdou7W9dAFcViOSfXYw)
+
+Markdown 小白教程里，比较全面的一篇教程了。
+
+
+### 2019-09-25
+
+- [不可思议的456天-寄正通往监狱大门的外包服务商们](https://mp.weixin.qq.com/s/MA8Hqm7-xlo6jgOo741XmA) 【荐】
+
+看守所的故事，比较详细。
+
+- [聊聊iPhone 11 Pro](https://mp.weixin.qq.com/s/DCz0QT4KxXwANkIwG-sCTA)
+
+这篇iPhone 11 的评测文章，读起来很舒服，虽然阅读不高，但看得出来作者有欣赏水平。
+
+
+### 2019-09-27
+
+- [《副业创收的误区，为啥你总掉进坑里》](https://mp.weixin.qq.com/s/bOn9mDMQT2pNis0Mrm_GtA)
+
+副业，自从中年危机和斜杠青年话题兴起过后，就一直是一个比较受关注的话题。文章里讲了作者身边的成功案例和正确路径，还有各种坑。
+
+另外，关于积累知识花钱学习和突破的问题，可以看这篇《[不能转化成生产力的知识都是消费](https://mp.weixin.qq.com/s/nj7rg8ls8TacS0c5piI2tg)》
+
+
 
 ## 2019-12-优质文章推荐
 
@@ -650,5 +682,4 @@
 
 - [《》]()
 
-- [《》]()
 
