--- a/03-优质信息源/02-公众号推荐.md
+++ b/03-优质信息源/02-公众号推荐.md
@@ -74,15 +74,35 @@
 
 虎嗅网的很多文章过于标题党、抢眼。他们自家编辑写的文章很一般，但转载的文章还不错。
 
+- 深流精选
+
+虎嗅出品。
+
 - 第一财经YiMagazine
 
 - PingWest品玩
 
 - 接招
 
+- 开柒
+
+科技互联网圈的八卦自媒体，有很多科技爆料和八卦。
+
 ### 产品类
 
 - 人人都是产品经理
+
+- 刘言飞语
+
+- 阿朱说
+
+- 笔下求生
+
+- 卫夕指北
+
+- 笔下求生
+
+圆首金老汉
 
 - Product Daily
 
