--- a/01-文章推荐/2016年-优质文章推荐.md
+++ b/01-文章推荐/2016年-优质文章推荐.md
@@ -65,6 +65,7 @@
 
 关于他的介绍，可以看这个篇：<https://alicesuck.tumblr.com>
 
+国内人体艺术写真最强的摄影师。其作品从2013至2015年按年度出的合集，2016年1月至2017年4月是按月出的合集，接下来是从VIP第16期至25期，然后是2019年按月出的合集，另外还有Tumblr博客写真、拍立得、法拉利女孩、Vimeo等，共63G。链接：<https://www.byzhihuo.com/thread-36434-1-1.html>
 
 
 ### 2016-04-05
