--- a/01-文章推荐/2019年-优质文章推荐.md
+++ b/01-文章推荐/2019年-优质文章推荐.md
@@ -576,11 +576,9 @@
 
 ## 2019-04-优质文章推荐
 
-
 ### 2019-04-07
 
 中文排版指南：
-
 
 - [《中文技术文档的写作规范》](https://github.com/ruanyf/document-style-guide)
 
@@ -592,6 +590,19 @@
 
 - [《README文档的规范写法》](https://github.com/AweiLoveAndroid/CommonDevKnowledge/blob/master/github_README/README%E6%96%87%E6%A1%A3%E7%9A%84%E8%A7%84%E8%8C%83%E5%86%99%E6%B3%95.md)
 
+
+### 2019-04-25
+
+- [得到 | 从甲骨文至得到今楷，造字的人都是神](https://mp.weixin.qq.com/s/ZnMxrhoH9piLf9EaSIwiGA)
+
+关于字体的一些常识。
+
+
+### 2019-05-29
+
+- [《独立宣言》使用了什么字体？](https://mp.weixin.qq.com/s/i1qgUaSHrQlvqT-u3qJySw)
+
+字体简史。本文启发于读Garfield,s.的《字体故事: 西文字体的美丽传奇》的读书笔记。
 
 ## 2019-06-优质文章推荐
 
@@ -606,6 +617,14 @@
 - [《【人物】那些年李笑来教给了我们什么？》](https://mp.weixin.qq.com/s/nZBuYK2iwPqVecOi1eh3RA) 【荐】
 
 - [《》]()
+
+
+
+## 2019-07-优质文章推荐
+
+ - [阿波罗计划的遗产](https://mp.weixin.qq.com/s/kB1cEZ6l1sOy_1M_0H7y4Q) 【荐】
+
+
 
 ## 2019-08-优质文章推荐
 
@@ -646,6 +665,18 @@
 关于深圳医保，写得比较详细。
 
 
+### 2019-08-29
+
+- [clover：像浏览器一样打开你的文件夹，效率办公必备！](https://mp.weixin.qq.com/s/9_flYZT-nAvgDFIlV1QQTQ)
+
+clover 这个软件的原作者因为技术能力原因，把代码交给了一个公司（或者什么团队吧）。这个接手的公司把软件名声搞坏之后（加入了各种弹窗广告），原作者也曾想把Clover 要回来，但遭到了拒绝。
+
+建议使用 clover 的如下版本：
+
+- Win7 / XP建议使用3.0.406版（原作者的最后一款良心版本，无广告）：在 Win7 上运行正常，在 Win10 运行是，可能会有bug。
+
+- Win10 建议用3.5.2版（可以用网友提供的去广告绿色版本）：修复了WIN10高分辨引起的BUG。
+
 ## 2019-09-优质文章推荐
 
 ### 2019-09-18
@@ -653,7 +684,6 @@
 - [《轻松上手写作利器 Markdown：从此文章排版无烦恼》](https://mp.weixin.qq.com/s/s2NAdou7W9dAFcViOSfXYw)
 
 Markdown 小白教程里，比较全面的一篇教程了。
-
 
 ### 2019-09-25
 
@@ -674,6 +704,17 @@ Markdown 小白教程里，比较全面的一篇教程了。
 
 另外，关于积累知识花钱学习和突破的问题，可以看这篇《[不能转化成生产力的知识都是消费](https://mp.weixin.qq.com/s/nj7rg8ls8TacS0c5piI2tg)》
 
+
+### 2019-09-29
+
+
+- [王兴内部讲话：为什么中国To B企业都活得这么惨？（重磅必读）](https://mp.weixin.qq.com/s/Qd-sjzjVZjZqGXPmUSizyg) 【荐】
+
+
+
+### 2019-09-30
+
+- [欧洲为何没有牛逼的互联网公司](https://mp.weixin.qq.com/s/1Wg5tEvq5WOkOtGXn83KGA)
 
 
 ## 2019-12-优质文章推荐
