--- a/03-优质信息源/02-公众号推荐.md
+++ b/03-优质信息源/02-公众号推荐.md
@@ -224,6 +224,8 @@ Java领域的大号。
 
 - 老钱说钱
 
+- 炒股拌饭
+
 - 关哥说险
 
 - 孟岩
@@ -277,6 +279,16 @@ Java领域的大号。
 - 小声比比
 
 更多良心公众号推荐，欢迎留言补充。
+
+### 其他
+
+- 网优雇佣军
+
+- 终结诈骗
+
+## 小众的公众号
+
+- 郭栩鹏
 
 
 
