--- a/01-文章推荐/2018年-优质文章推荐.md
+++ b/01-文章推荐/2018年-优质文章推荐.md
@@ -316,6 +316,14 @@ PS：手机地图的竞品分析，下面这篇不错。
 一篇长文，对格局提升挺有用。
 
 
+### 2018-11-09
+
+
+- [献上此神器，攻克抖音国际版，不再闪退](https://zhuanlan.zhihu.com/p/49047623)
+
+使用 VirtualXposed（Android手机上一种沙盒软件） 安装国际版抖音。
+
+
 
 ### 2018-11-16
 
