--- a/01-文章推荐/2019年-优质文章推荐.md
+++ b/01-文章推荐/2019年-优质文章推荐.md
@@ -695,7 +695,6 @@ Markdown 小白教程里，比较全面的一篇教程了。
 
 这篇iPhone 11 的评测文章，读起来很舒服，虽然阅读不高，但看得出来作者有欣赏水平。
 
-
 ### 2019-09-27
 
 - [《副业创收的误区，为啥你总掉进坑里》](https://mp.weixin.qq.com/s/bOn9mDMQT2pNis0Mrm_GtA)
@@ -704,17 +703,39 @@ Markdown 小白教程里，比较全面的一篇教程了。
 
 另外，关于积累知识花钱学习和突破的问题，可以看这篇《[不能转化成生产力的知识都是消费](https://mp.weixin.qq.com/s/nj7rg8ls8TacS0c5piI2tg)》
 
-
 ### 2019-09-29
 
-
 - [王兴内部讲话：为什么中国To B企业都活得这么惨？（重磅必读）](https://mp.weixin.qq.com/s/Qd-sjzjVZjZqGXPmUSizyg) 【荐】
-
-
 
 ### 2019-09-30
 
 - [欧洲为何没有牛逼的互联网公司](https://mp.weixin.qq.com/s/1Wg5tEvq5WOkOtGXn83KGA)
+
+
+### 2019-10-01
+
+- [新中国七十年电影审查简史（1949-2019）](https://mp.weixin.qq.com/s/IT4VRjujLWYbBp2CusHoew)
+
+### 2019-10-03
+
+- [6.5亿人口，60%互联网渗透率，东南亚还有哪些掘金机会？](https://mp.weixin.qq.com/s/WGNlrmzUNrE7DwD9Lcl2Xw)
+
+### 2019-10-09
+
+- [独家揭晓Airbnb寻路中国隐秘史，三轮权力洗牌上演连环大戏](https://mp.weixin.qq.com/s/aEXtHFhN__W2fHQVyz_6RQ)
+
+### 2019-10-15
+
+- [中国军队进化史](https://mp.weixin.qq.com/s/VEnqU0VZ3RcB4aGOkqs8dg)
+
+
+### 2019-10-23
+
+- [这是我见过分析世界格局最透彻的文章（强烈推荐）](https://mp.weixin.qq.com/s/nqtGWnM5Png7mCtXbrB-zQ)
+
+### 2019-11-01
+
+- [互联网上超过40%的流量都是假的](https://mp.weixin.qq.com/s/DOL1hYAZAYbni07G73FQzw)
 
 
 ## 2019-12-优质文章推荐
