--- a/01-文章推荐/2018年-优质文章推荐.md
+++ b/01-文章推荐/2018年-优质文章推荐.md
@@ -638,14 +638,19 @@ keso 转的一篇保险避坑指南，忽略文末的推广，还是挺受用的
 - [《微信的自救》](https://mp.weixin.qq.com/s/9hgfWhQp4f4_8TP0CfRGSg)
 
 
+### 2018-12-22
 
+- [传音手机的非洲传奇](https://mp.weixin.qq.com/s/QTs8EJtgKbGg9CQ0dA_cZQ)
+
+
+在全球范围内，传音的手机销量排名第4，仅次于三星、苹果和华为。
+
+2017年，传音的手机出货量高达1.2亿台；经过10年的发展，传音共在全球销售了超过2.46亿台双卡手机。
 
 
 ### 2018-12-28
 
 - [《2018，28岁的她从阿里裸辞，选择诗和远方》](https://mp.weixin.qq.com/s/fsrf4QqEfcojLcdTREQhiQ)
-
-
 
 
 ### 2018-12-29
