--- a/01-文章推荐/2019年-优质文章推荐.md
+++ b/01-文章推荐/2019年-优质文章推荐.md
@@ -612,6 +612,11 @@
 
 介绍了cps、dsp等常见感念。
 
+
+### 2019-06-19
+
+- [每年体检究竟有没有用？到底该如何选择体检项目？](https://mp.weixin.qq.com/s/_rF7Vq1iRa-nuLCZxxcVIA)
+
 ### 2019-06-20
 
 - [《【人物】那些年李笑来教给了我们什么？》](https://mp.weixin.qq.com/s/nZBuYK2iwPqVecOi1eh3RA) 【荐】
@@ -657,6 +662,8 @@
 （2）除了公司大部分股权都在国外，还有一个原因，就是腾讯和阿里巴巴的注册地都不在中国，而是在位于**加勒比海西北部的开曼群岛**上。那么为什么要选择开曼群岛？因为在开曼群岛只要年龄到达18岁便可以注册成立一家有限公司，公司需要1个股东和1个董事，而且注册资本只需要5万美元，还不需要验资，这样的条件对于一个企业来说就是圣地。
 
 另外开曼群岛的税收相当低，据悉在开曼群岛，只收进口税、工商登记税、旅游者税等几个简单的税种，而我们常见的人所得税、企业所得税等等在这里都没有，相比之下在所得税方面，中国内地税率为25%。仅这一条，就吸引了不少知名企业把注册地从其他地方转到了这里。
+
+- [一篇把‘社保’全部讲明白](https://mp.weixin.qq.com/s/MvWjxt7K2N1hmR4kzSywxQ)
 
 ### 2019-08-26
 
@@ -728,6 +735,16 @@ Markdown 小白教程里，比较全面的一篇教程了。
 
 - [中国军队进化史](https://mp.weixin.qq.com/s/VEnqU0VZ3RcB4aGOkqs8dg)
 
+### 2019-10-21
+
+
+- [下一个DAU过亿的产品在哪？](https://mp.weixin.qq.com/s/QkPKnEAR9bfTvGjsX_T-xA)
+
+### 2019-10-22
+
+- [你的版权常识指南](https://mp.weixin.qq.com/s/4uEBoajTygSADslzem3yZA)
+
+关于版权、字体相关的内容。
 
 ### 2019-10-23
 
@@ -740,8 +757,16 @@ Markdown 小白教程里，比较全面的一篇教程了。
 
 ## 2019-12-优质文章推荐
 
+### 2019-12-04
+
+- [《你一定要知道的断缴社保N宗罪》](https://mp.weixin.qq.com/s/lRJ4b278K_90SvXsqVE1Rg)
+
+
+
+
 ### 2019-12-01
 
 - [《》]()
+
 
 
