--- a/01-文章推荐/2017年-优质文章推荐.md
+++ b/01-文章推荐/2017年-优质文章推荐.md
@@ -48,6 +48,12 @@ instagram 高速换胎，描述运行环境切换到 Python 3 ，细节不可谓
 ## 2017-07-优质文章推荐
 
 
+### 2017-08-07
+
+- [机器学习中的目标函数、损失函数、代价函数有什么区别？](https://www.zhihu.com/question/52398145/answer/209358209)
+
+关于目标函数，一个非常深入浅出的解读。经验风险，着眼于过去，结构风险，目标是未来，二者的平衡才能是最小化，目标函数。
+
 ## 2017-09-优质文章推荐
 
 
