--- a/01-文章推荐/2018年-优质文章推荐.md
+++ b/01-文章推荐/2018年-优质文章推荐.md
@@ -523,6 +523,8 @@ PS：手机地图的竞品分析，下面这篇不错。
 
 - [《非共识与小趋势——复盘罗辑思维7年演化之路》](https://mp.weixin.qq.com/s/36KH4DFTRyeawPScPm_uFw) 【荐】
 
+做一件有价值的事，然后等待时间的回报。
+
 ### 2019-12-18
 
 - [《你不专业并且自以为是，所以被坑》](https://mp.weixin.qq.com/s/A6AeROqIZKa5W8SAVQFyaQ)
