--- a/03-优质信息源/02-公众号推荐.md
+++ b/03-优质信息源/02-公众号推荐.md
@@ -103,11 +103,21 @@
 
 - 卫夕指北
 
-- 笔下求生
-
-圆首金老汉
+- 圆首金老汉
 
 - Product Daily
+
+- 歌词经理
+
+- hanniman
+
+AI 产品经理。
+
+### 设计类
+
+- 呆呆U理
+
+- 臭鱼的交互设计
 
 ### 软件推荐
 
@@ -116,6 +126,11 @@
 - 少数派
 
 - 知晓程序
+
+### 数码类
+
+- 笔吧测评室
+
 
 ### 效率工具（个人号）
 
@@ -141,6 +156,10 @@ Java领域的大号。
 
 在腾讯工作十年，其中在微信部门就待了八年。
 
+- 凤凰牌老熊
+
+支付行内的文章。
+
 ### 人工智能相关
 
 - 机器之心
@@ -163,6 +182,16 @@ Java领域的大号。
 
 - 给产品经理讲技术
 
+- 啃饼随想
+
+前微信公众号的产品总监。
+
+- 傅盛
+
+- 道哥的黑板报
+
+
+
 ## 非互联网领域
 
 ### 自媒体大V
@@ -178,6 +207,8 @@ Java领域的大号。
 - L先生说
 
 - 记忆承载
+
+- 太阳照常升起
 
 ### 有深度的公众号
 
@@ -243,7 +274,6 @@ Java领域的大号。
 
 ### 时政类
 
-- 卢克文工作室
 
 ### 电影
 
@@ -274,6 +304,14 @@ Java领域的大号。
 土摩托是三联周刊的编辑。
 
 - 混子曰（yue）
+
+- 短史记-腾讯新闻
+
+
+
+### 旅行
+
+- 大西洋鳗鱼
 
 ### 有趣的公众号
 
